// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeaturedRoomTypes /> by default should render the right structure 1`] = `
<FeaturedRoomTypes
  featuredRoomTypes={
    Array [
      Object {
        "bedsNumber": 3,
        "guestsNumber": 3,
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "locationName": "Catania",
        "pricePerPeriod": "$280",
        "ratingNumber": 4.8,
        "roomTypeName": "The Cat House",
        "roomTypeUrl": "/",
      },
      Object {
        "bedsNumber": 3,
        "guestsNumber": 3,
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "locationName": "Catania",
        "pricePerPeriod": "$280",
        "ratingNumber": 4.8,
        "roomTypeName": "The Cat House",
        "roomTypeUrl": "/",
      },
    ]
  }
  headingText={null}
  isShowingPlaceholder={false}
>
  <FeaturedRoomType
    bedsLabel="Beds"
    bedsNumber={3}
    guestsLabel="Guests"
    guestsNumber={3}
    imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
    isShowingPlaceholder={false}
    key="The Cat House0"
    locationName="Catania"
    periodText="per night"
    pricePerPeriod="$280"
    ratingNumber={4.8}
    roomTypeName="The Cat House"
    roomTypeUrl="/"
    roomTypeUrlTarget="_self"
  >
    <Card
      className="has-featured"
      href="/"
      target="_self"
    >
      <a
        className="ui card has-featured"
        href="/"
        onClick={[Function]}
        target="_self"
      >
        <withLazyLoad(ResponsiveImage)
          imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
          isFluid={true}
          isLazyLoaded={true}
        >
          <LazyLoader
            componentProps={
              Object {
                "alternativeText": undefined,
                "isFluid": true,
                "isLazyLoaded": true,
                "sizes": undefined,
                "srcSet": undefined,
              }
            }
            lazyComponent={[Function]}
            lazyProps={
              Object {
                "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
                "placeholderImageUrl": undefined,
              }
            }
          >
            <div />
            <ResponsiveImage
              alternativeText="Image Widget"
              hasRoundedCorners={false}
              imageHeight={null}
              imageNotFoundLabelText="Image not found!"
              imageTitle="Image Title"
              imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
              imageWidth={null}
              isAvatar={false}
              isCircular={false}
              isFluid={true}
              isLazyLoaded={true}
              label={null}
              sizes={null}
              srcSet={null}
            >
              <figure
                className="responsive-image is-fluid"
              >
                <Image
                  alt="Image Widget"
                  as="img"
                  avatar={false}
                  fluid={true}
                  onLoad={[Function]}
                  sizes={null}
                  src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                  srcSet={null}
                  title="Image Title"
                  ui={true}
                >
                  <img
                    alt="Image Widget"
                    className="ui fluid image"
                    onLoad={[Function]}
                    sizes={null}
                    src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                    srcSet={null}
                    title="Image Title"
                  />
                </Image>
              </figure>
            </ResponsiveImage>
            <div />
          </LazyLoader>
        </withLazyLoad(ResponsiveImage)>
        <CardContent>
          <div
            className="content"
          >
            <CardHeader>
              <div
                className="header"
              >
                <Heading
                  className={null}
                  hasMargin={true}
                  isColorInverted={false}
                  size="medium"
                  textAlign={null}
                >
                  <Header
                    as="h3"
                    className=""
                    inverted={false}
                    textAlign={null}
                  >
                    <h3
                      className="ui header"
                    >
                      The Cat House
                    </h3>
                  </Header>
                </Heading>
              </div>
            </CardHeader>
            <CardDescription>
              <div
                className="description"
              >
                Catania
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                Guests: 3 | Beds: 3
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <span>
                  from 
                  <Heading
                    className={null}
                    hasMargin={true}
                    isColorInverted={false}
                    size="medium"
                    textAlign={null}
                  >
                    <Header
                      as="h3"
                      className=""
                      inverted={false}
                      textAlign={null}
                    >
                      <h3
                        className="ui header"
                      >
                        $280
                      </h3>
                    </Header>
                  </Heading>
                  per night
                </span>
              </div>
            </CardDescription>
          </div>
        </CardContent>
      </a>
    </Card>
  </FeaturedRoomType>
  <FeaturedRoomType
    bedsLabel="Beds"
    bedsNumber={3}
    guestsLabel="Guests"
    guestsNumber={3}
    imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
    isShowingPlaceholder={false}
    key="The Cat House1"
    locationName="Catania"
    periodText="per night"
    pricePerPeriod="$280"
    ratingNumber={4.8}
    roomTypeName="The Cat House"
    roomTypeUrl="/"
    roomTypeUrlTarget="_self"
  >
    <Card
      className="has-featured"
      href="/"
      target="_self"
    >
      <a
        className="ui card has-featured"
        href="/"
        onClick={[Function]}
        target="_self"
      >
        <withLazyLoad(ResponsiveImage)
          imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
          isFluid={true}
          isLazyLoaded={true}
        >
          <LazyLoader
            componentProps={
              Object {
                "alternativeText": undefined,
                "isFluid": true,
                "isLazyLoaded": true,
                "sizes": undefined,
                "srcSet": undefined,
              }
            }
            lazyComponent={[Function]}
            lazyProps={
              Object {
                "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
                "placeholderImageUrl": undefined,
              }
            }
          >
            <div />
            <ResponsiveImage
              alternativeText="Image Widget"
              hasRoundedCorners={false}
              imageHeight={null}
              imageNotFoundLabelText="Image not found!"
              imageTitle="Image Title"
              imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
              imageWidth={null}
              isAvatar={false}
              isCircular={false}
              isFluid={true}
              isLazyLoaded={true}
              label={null}
              sizes={null}
              srcSet={null}
            >
              <figure
                className="responsive-image is-fluid"
              >
                <Image
                  alt="Image Widget"
                  as="img"
                  avatar={false}
                  fluid={true}
                  onLoad={[Function]}
                  sizes={null}
                  src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                  srcSet={null}
                  title="Image Title"
                  ui={true}
                >
                  <img
                    alt="Image Widget"
                    className="ui fluid image"
                    onLoad={[Function]}
                    sizes={null}
                    src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                    srcSet={null}
                    title="Image Title"
                  />
                </Image>
              </figure>
            </ResponsiveImage>
            <div />
          </LazyLoader>
        </withLazyLoad(ResponsiveImage)>
        <CardContent>
          <div
            className="content"
          >
            <CardHeader>
              <div
                className="header"
              >
                <Heading
                  className={null}
                  hasMargin={true}
                  isColorInverted={false}
                  size="medium"
                  textAlign={null}
                >
                  <Header
                    as="h3"
                    className=""
                    inverted={false}
                    textAlign={null}
                  >
                    <h3
                      className="ui header"
                    >
                      The Cat House
                    </h3>
                  </Header>
                </Heading>
              </div>
            </CardHeader>
            <CardDescription>
              <div
                className="description"
              >
                Catania
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                Guests: 3 | Beds: 3
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <span>
                  from 
                  <Heading
                    className={null}
                    hasMargin={true}
                    isColorInverted={false}
                    size="medium"
                    textAlign={null}
                  >
                    <Header
                      as="h3"
                      className=""
                      inverted={false}
                      textAlign={null}
                    >
                      <h3
                        className="ui header"
                      >
                        $280
                      </h3>
                    </Header>
                  </Heading>
                  per night
                </span>
              </div>
            </CardDescription>
          </div>
        </CardContent>
      </a>
    </Card>
  </FeaturedRoomType>
</FeaturedRoomTypes>
`;

exports[`<FeaturedRoomTypes /> if \`props.featuredRoomTypes\` length === 0 and \`props.isShowingPlaceholder\` === true should render the right structure 1`] = `
<FeaturedRoomTypes
  featuredRoomTypes={Array []}
  headingText={null}
  isShowingPlaceholder={true}
>
  <FeaturedRoomType
    bedsLabel="Beds"
    bedsNumber={0}
    guestsLabel="Guests"
    guestsNumber={0}
    imageUrl=""
    isShowingPlaceholder={true}
    key="0"
    locationName=""
    periodText="per night"
    pricePerPeriod=""
    roomTypeName=""
    roomTypeUrl=""
    roomTypeUrlTarget="_self"
  >
    <Card
      className="has-featured"
      href=""
      target="_self"
    >
      <div
        className="ui card has-featured"
        href=""
        onClick={[Function]}
        target="_self"
      >
        <BlockPlaceholder
          isFluid={false}
          isRectangular={true}
          isSquare={false}
        >
          <div
            className="placeholder block rectangle"
          />
        </BlockPlaceholder>
        <CardContent>
          <div
            className="content"
          >
            <CardHeader>
              <div
                className="header"
              >
                <Divider
                  className=""
                  hasLine={false}
                  size="small"
                >
                  <Divider
                    className="is-size-small"
                    hidden={true}
                    section={false}
                  >
                    <div
                      className="ui hidden divider is-size-small"
                    />
                  </Divider>
                </Divider>
                <TextPlaceholder
                  isFluid={true}
                  length="medium"
                >
                  <div
                    className="placeholder text medium fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
              </div>
            </CardHeader>
          </div>
        </CardContent>
      </div>
    </Card>
  </FeaturedRoomType>
  <FeaturedRoomType
    bedsLabel="Beds"
    bedsNumber={0}
    guestsLabel="Guests"
    guestsNumber={0}
    imageUrl=""
    isShowingPlaceholder={true}
    key="1"
    locationName=""
    periodText="per night"
    pricePerPeriod=""
    roomTypeName=""
    roomTypeUrl=""
    roomTypeUrlTarget="_self"
  >
    <Card
      className="has-featured"
      href=""
      target="_self"
    >
      <div
        className="ui card has-featured"
        href=""
        onClick={[Function]}
        target="_self"
      >
        <BlockPlaceholder
          isFluid={false}
          isRectangular={true}
          isSquare={false}
        >
          <div
            className="placeholder block rectangle"
          />
        </BlockPlaceholder>
        <CardContent>
          <div
            className="content"
          >
            <CardHeader>
              <div
                className="header"
              >
                <Divider
                  className=""
                  hasLine={false}
                  size="small"
                >
                  <Divider
                    className="is-size-small"
                    hidden={true}
                    section={false}
                  >
                    <div
                      className="ui hidden divider is-size-small"
                    />
                  </Divider>
                </Divider>
                <TextPlaceholder
                  isFluid={true}
                  length="medium"
                >
                  <div
                    className="placeholder text medium fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
              </div>
            </CardHeader>
          </div>
        </CardContent>
      </div>
    </Card>
  </FeaturedRoomType>
  <FeaturedRoomType
    bedsLabel="Beds"
    bedsNumber={0}
    guestsLabel="Guests"
    guestsNumber={0}
    imageUrl=""
    isShowingPlaceholder={true}
    key="2"
    locationName=""
    periodText="per night"
    pricePerPeriod=""
    roomTypeName=""
    roomTypeUrl=""
    roomTypeUrlTarget="_self"
  >
    <Card
      className="has-featured"
      href=""
      target="_self"
    >
      <div
        className="ui card has-featured"
        href=""
        onClick={[Function]}
        target="_self"
      >
        <BlockPlaceholder
          isFluid={false}
          isRectangular={true}
          isSquare={false}
        >
          <div
            className="placeholder block rectangle"
          />
        </BlockPlaceholder>
        <CardContent>
          <div
            className="content"
          >
            <CardHeader>
              <div
                className="header"
              >
                <Divider
                  className=""
                  hasLine={false}
                  size="small"
                >
                  <Divider
                    className="is-size-small"
                    hidden={true}
                    section={false}
                  >
                    <div
                      className="ui hidden divider is-size-small"
                    />
                  </Divider>
                </Divider>
                <TextPlaceholder
                  isFluid={true}
                  length="medium"
                >
                  <div
                    className="placeholder text medium fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
              </div>
            </CardHeader>
          </div>
        </CardContent>
      </div>
    </Card>
  </FeaturedRoomType>
</FeaturedRoomTypes>
`;

exports[`<FeaturedRoomTypes /> if \`props.headingText\` is passed should render the right structure 1`] = `
<FeaturedRoomTypes
  featuredRoomTypes={
    Array [
      Object {
        "bedsNumber": 3,
        "guestsNumber": 3,
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "locationName": "Catania",
        "pricePerPeriod": "$280",
        "ratingNumber": 4.8,
        "roomTypeName": "The Cat House",
        "roomTypeUrl": "/",
      },
      Object {
        "bedsNumber": 3,
        "guestsNumber": 3,
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "locationName": "Catania",
        "pricePerPeriod": "$280",
        "ratingNumber": 4.8,
        "roomTypeName": "The Cat House",
        "roomTypeUrl": "/",
      },
    ]
  }
  headingText="My god I love Elton John"
  isShowingPlaceholder={false}
>
  <Heading
    className={null}
    hasMargin={true}
    isColorInverted={false}
    size="medium"
    textAlign={null}
  >
    <Header
      as="h3"
      className=""
      inverted={false}
      textAlign={null}
    >
      <h3
        className="ui header"
      >
        My god I love Elton John
      </h3>
    </Header>
  </Heading>
  <FeaturedRoomType
    bedsLabel="Beds"
    bedsNumber={3}
    guestsLabel="Guests"
    guestsNumber={3}
    imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
    isShowingPlaceholder={false}
    key="The Cat House0"
    locationName="Catania"
    periodText="per night"
    pricePerPeriod="$280"
    ratingNumber={4.8}
    roomTypeName="The Cat House"
    roomTypeUrl="/"
    roomTypeUrlTarget="_self"
  >
    <Card
      className="has-featured"
      href="/"
      target="_self"
    >
      <a
        className="ui card has-featured"
        href="/"
        onClick={[Function]}
        target="_self"
      >
        <withLazyLoad(ResponsiveImage)
          imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
          isFluid={true}
          isLazyLoaded={true}
        >
          <LazyLoader
            componentProps={
              Object {
                "alternativeText": undefined,
                "isFluid": true,
                "isLazyLoaded": true,
                "sizes": undefined,
                "srcSet": undefined,
              }
            }
            lazyComponent={[Function]}
            lazyProps={
              Object {
                "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
                "placeholderImageUrl": undefined,
              }
            }
          >
            <div />
            <ResponsiveImage
              alternativeText="Image Widget"
              hasRoundedCorners={false}
              imageHeight={null}
              imageNotFoundLabelText="Image not found!"
              imageTitle="Image Title"
              imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
              imageWidth={null}
              isAvatar={false}
              isCircular={false}
              isFluid={true}
              isLazyLoaded={true}
              label={null}
              sizes={null}
              srcSet={null}
            >
              <figure
                className="responsive-image is-fluid"
              >
                <Image
                  alt="Image Widget"
                  as="img"
                  avatar={false}
                  fluid={true}
                  onLoad={[Function]}
                  sizes={null}
                  src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                  srcSet={null}
                  title="Image Title"
                  ui={true}
                >
                  <img
                    alt="Image Widget"
                    className="ui fluid image"
                    onLoad={[Function]}
                    sizes={null}
                    src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                    srcSet={null}
                    title="Image Title"
                  />
                </Image>
              </figure>
            </ResponsiveImage>
            <div />
          </LazyLoader>
        </withLazyLoad(ResponsiveImage)>
        <CardContent>
          <div
            className="content"
          >
            <CardHeader>
              <div
                className="header"
              >
                <Heading
                  className={null}
                  hasMargin={true}
                  isColorInverted={false}
                  size="medium"
                  textAlign={null}
                >
                  <Header
                    as="h3"
                    className=""
                    inverted={false}
                    textAlign={null}
                  >
                    <h3
                      className="ui header"
                    >
                      The Cat House
                    </h3>
                  </Header>
                </Heading>
              </div>
            </CardHeader>
            <CardDescription>
              <div
                className="description"
              >
                Catania
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                Guests: 3 | Beds: 3
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <span>
                  from 
                  <Heading
                    className={null}
                    hasMargin={true}
                    isColorInverted={false}
                    size="medium"
                    textAlign={null}
                  >
                    <Header
                      as="h3"
                      className=""
                      inverted={false}
                      textAlign={null}
                    >
                      <h3
                        className="ui header"
                      >
                        $280
                      </h3>
                    </Header>
                  </Heading>
                  per night
                </span>
              </div>
            </CardDescription>
          </div>
        </CardContent>
      </a>
    </Card>
  </FeaturedRoomType>
  <FeaturedRoomType
    bedsLabel="Beds"
    bedsNumber={3}
    guestsLabel="Guests"
    guestsNumber={3}
    imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
    isShowingPlaceholder={false}
    key="The Cat House1"
    locationName="Catania"
    periodText="per night"
    pricePerPeriod="$280"
    ratingNumber={4.8}
    roomTypeName="The Cat House"
    roomTypeUrl="/"
    roomTypeUrlTarget="_self"
  >
    <Card
      className="has-featured"
      href="/"
      target="_self"
    >
      <a
        className="ui card has-featured"
        href="/"
        onClick={[Function]}
        target="_self"
      >
        <withLazyLoad(ResponsiveImage)
          imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
          isFluid={true}
          isLazyLoaded={true}
        >
          <LazyLoader
            componentProps={
              Object {
                "alternativeText": undefined,
                "isFluid": true,
                "isLazyLoaded": true,
                "sizes": undefined,
                "srcSet": undefined,
              }
            }
            lazyComponent={[Function]}
            lazyProps={
              Object {
                "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
                "placeholderImageUrl": undefined,
              }
            }
          >
            <div />
            <ResponsiveImage
              alternativeText="Image Widget"
              hasRoundedCorners={false}
              imageHeight={null}
              imageNotFoundLabelText="Image not found!"
              imageTitle="Image Title"
              imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
              imageWidth={null}
              isAvatar={false}
              isCircular={false}
              isFluid={true}
              isLazyLoaded={true}
              label={null}
              sizes={null}
              srcSet={null}
            >
              <figure
                className="responsive-image is-fluid"
              >
                <Image
                  alt="Image Widget"
                  as="img"
                  avatar={false}
                  fluid={true}
                  onLoad={[Function]}
                  sizes={null}
                  src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                  srcSet={null}
                  title="Image Title"
                  ui={true}
                >
                  <img
                    alt="Image Widget"
                    className="ui fluid image"
                    onLoad={[Function]}
                    sizes={null}
                    src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                    srcSet={null}
                    title="Image Title"
                  />
                </Image>
              </figure>
            </ResponsiveImage>
            <div />
          </LazyLoader>
        </withLazyLoad(ResponsiveImage)>
        <CardContent>
          <div
            className="content"
          >
            <CardHeader>
              <div
                className="header"
              >
                <Heading
                  className={null}
                  hasMargin={true}
                  isColorInverted={false}
                  size="medium"
                  textAlign={null}
                >
                  <Header
                    as="h3"
                    className=""
                    inverted={false}
                    textAlign={null}
                  >
                    <h3
                      className="ui header"
                    >
                      The Cat House
                    </h3>
                  </Header>
                </Heading>
              </div>
            </CardHeader>
            <CardDescription>
              <div
                className="description"
              >
                Catania
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                Guests: 3 | Beds: 3
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <span>
                  from 
                  <Heading
                    className={null}
                    hasMargin={true}
                    isColorInverted={false}
                    size="medium"
                    textAlign={null}
                  >
                    <Header
                      as="h3"
                      className=""
                      inverted={false}
                      textAlign={null}
                    >
                      <h3
                        className="ui header"
                      >
                        $280
                      </h3>
                    </Header>
                  </Heading>
                  per night
                </span>
              </div>
            </CardDescription>
          </div>
        </CardContent>
      </a>
    </Card>
  </FeaturedRoomType>
</FeaturedRoomTypes>
`;
